# zephyr

./: MAINTAINERS.yml  dfu-usb.sh  gpt-trace-dump.py  west.yml
doc/releases/: migration-guide-3.6.rst
drivers/: CMakeLists.txt  Kconfig
drivers/clock_control/: clock_control_mcux_ccm.c  clock_control_mcux_ccm_rev2.c  clock_control_mcux_syscon.c
drivers/disk/: Kconfig.sdmmc  mmc_subsys.c  usdhc.c
drivers/dma/: dma_mcux_edma.c  dma_mcux_lpc.c
drivers/eeprom/: Kconfig
drivers/ethernet/: CMakeLists.txt  Kconfig.mcux  Kconfig.stm32_hal  eth_mcux.c  eth_mcux_relocate_test.c  eth_nxp_enet.c  eth_nxp_s32_netc_priv.h  eth_nxp_s32_netc_psi.c  eth_nxp_s32_netc_vsi.c  mock_tcp.c
drivers/flash/: CMakeLists.txt  flash_mcux_flexspi_nor.c  flash_nxp_s32_qspi_nor.c
drivers/i2s/: i2s_mcux_flexcomm.c  i2s_mcux_sai.c
drivers/i3c/: i3c_mcux.c
drivers/interrupt_controller/: intc_eirq_nxp_s32.c
drivers/mipi_dbi/: mipi_dbi_spi.c
drivers/pinctrl/: pinctrl_imx.c
drivers/pwm/: CMakeLists.txt  Kconfig.mcux_flexio  pwm_mcux_flexio.c  pwm_mcux_ftm.c
drivers/sdhc/: imx_usdhc.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/serial/: Kconfig.mcux_flexcomm  uart_mcux_flexcomm.c  uart_mcux_lpuart.c
drivers/timer/: cortex_m_systick.c  mcux_gpt_timer.c
include/zephyr/: devicetree.h
kernel/: CMakeLists.txt  Kconfig  idle.c  timeout.c  timer.c
samples/subsys/ipc/openamp/: CMakeLists.txt  sysbuild.cmake
samples/subsys/ipc/openamp/remote/: CMakeLists.txt
samples/subsys/ipc/openamp/remote/boards/: mimxrt1170_evk_cm4.conf  mimxrt1170_evk_cm4.overlay
subsys/sd/: Kconfig  (+6 more)
(+317 files in other folders)
